Version 7.1
===========
- Added tStringStream typedef (a TCHAR stringstream)

Version 7.0.2
=============
* Fix for a memory leak in CDC
* Fix for accelerators in WinCE
* Fix for menu check marks when themes are disabled
* Fix for OnMessageReflect in dialogs

Version 7.0.1
=============
* Supports the latest version of MinGW compiler
* DialogProc now returns INT_PTR instead of BOOL
* Fixed several x64 warnings
* Fixed DragAcceptFiles error when WIN32_LEAN_AND_MEAN is defined
* Added OnPaint to CDialog and CPropertyPage
* Minor update to the documentation
* Added targetver.h to samples
* Supports VS2010's resource editor

Incompatibilities with previous versions
----------------------------------------
DialogProc now returns INT_PTR instead of BOOL. This change will be required
in user code as well.


Version 7.0
===========

New Features and Enhancements
-----------------------------
* The following function now return CWnd* instead of HWND:
   GetActiveWindow, GetAncestor, GetCapture, GetFocus, GetDlgItem, GetWindow,
   GetLastAtivePopup, GetParent, GetTopWindow, SetActiveWindow, SetCapture, 
   SetFocus, and SetParent.  This helps the framework to be more object
   orientated, by allowing the programmer to work more directly with CWnds.
   It also reduces the need to convert between CWnds and HWNDs in user code.
   If a CWnd object for the HWND doesn't already exist, Win32++ creates a 
   temporary CWnd. The pointers returned by these functions should not be
   stored and used later, as they might not be valid then.
* Added CThread class to simplify the task of using threads and creating
   windows in different threads. CThread can be used for both worker threads
   and GUI threads. Refer to the Thread and DirectX samples for examples of 
   how to use CThread to create windows in a different thread. The DirectX
   sample also uses a customized message loop for the thread.   
* Added the following control wrappers: CAnimation, CComboBox, CComboBoxEx,